test/correct/EnumFromTo5.hs
module EnumFromTo5 where

main :: [Int]
main = list
  where
    list :: [Int]
    list = [60,57..50]
