test/typeerrors/Examples/ExprListElem.hs
module ExprListElem where

f = [ "neushoorn" , 47 ]
